--- a/src/components/typography/style.scss
+++ b/src/components/typography/style.scss
@@ -1,5 +1,9 @@
 @import "../../../utils/scss/helper.scss";
 
+h1, h2, h3, h4, h5, h6, p, span {
+  margin: 0;
+}
+
 .typography{
   font-family: var(--font-family-01);
   font-weight: var(--font-weight-regular);
