--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -26,8 +26,15 @@
   height: 88px;
   @include breakpoint(tablet) {
     padding: 0 var(--spacing-size-sm);
+    flex-wrap: nowrap;
   }
   &-brand{
+    @include breakpoint(tablet) {
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+    }
     svg{
       path{
         fill: var(--fill-brand);
@@ -55,6 +62,11 @@
       padding: var(--spacing-inset-size-xs);
       width: fit-content;
       position: initial;
+      height: 100%;
+      max-height: initial;
+      width: 100%;
+      display: flex;
+      align-items: center;
     }
   }
   &--opened{
