--- a/src/components/select/style.scss
+++ b/src/components/select/style.scss
@@ -1,4 +1,4 @@
-@import '@meiuca/dsc-design-tokens/dist/scss/mixins.scss';
+@import 'ds-in-code-design-tokens/dist/scss/mixins.scss';
 
 .select {
   display: flex;
