refactor: code style changes in components

--- a/src/components/icon/icon.scss
+++ b/src/components/icon/icon.scss
@@ -1,22 +1,26 @@
-.icon {
+.dscIcon {
   color: var(--neutral-elements-03);
-  &--sm{
+
+  &--sm {
     width: 16px;
     height: 16px;
   }
-  &--md{
+
+  &--md {
     width: 24px;
     height: 24px;
   }
-  &--lg{
+  
+  &--lg {
     width: 32px;
     height: 32px;
   }
+
   svg {
     width: inherit;
     height: inherit;
 
-    path{
+    path {
       fill: currentColor;
     }
   }
