--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,6 +1,6 @@
 @import 'ds-in-code-design-tokens/dist/scss/mixins.scss';
 
-.card {
+.dscCard {
   width: 100%;
   height: 100%;
   // Card / Structure
@@ -9,10 +9,11 @@
   // Card / Border
   border: var(--border-width-hairline) solid var(--neutral-surface-02);
 
-  @include motion-token(switch-slow, '&:hover');
   // Card / Hover
   &:hover {
     // TOKENS RGBA
     box-shadow: var(--shadow-level-3) rgba(0, 0, 0, var(--opacity-level-light) );
   }
+
+  @include motion-token(switch-slow, '&:hover');
 }
