--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,6 +1,6 @@
 @import 'ds-in-code-design-tokens/dist/scss/mixins.scss';
 
-.checkbox{
+.dscCheckbox {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,6 +14,7 @@
   font-weight: var(--font-weight-regular);
   line-height: var(--line-height-default);
   color: var(--neutral-elements-03);
+
   // Hide native checkbox
   input {
     position: absolute;
@@ -22,43 +23,50 @@
     height: 0;
     width: 0;
   }
+
   // Checkbox / Structure / Box
-  .checkbox-checkmark {
+  .dscCheckbox__checkmark {
     width: 16px;
     height: 16px;
     border: var(--border-width-thin) solid var(--neutral-elements-03);
     border-radius: var(--border-radius-none);
     margin-right: var(--spacing-size-nano);
+
     @include motion-token(switch-slow, '&:hover');
   }
+
   // Checkbox / State / Hover
-  &:hover:not(.checkbox--disabled):not(.checkbox--checked) {
-    .checkbox-checkmark {
+  &:hover:not(.dscCheckbox--disabled):not(.dscCheckbox--checked) {
+    .dscCheckbox__checkmark {
       background-color: var(--neutral-surface-02);
     }
   }
+
   // Checkbox / State / Selected
-  input:checked:not(:disabled) ~ .checkbox-checkmark {
+  input:checked:not(:disabled) ~ .dscCheckbox__checkmark {
     background-color: var(--brand-color-pure);
     border-color: var(--brand-color-pure);
     dsc-icon::part(icon){
       color: var(--contrast-color-brand);
     }
   }
+
   // Checkbox / State / Focused
-  input:focus-visible ~ .checkbox-checkmark {
+  input:focus-visible ~ .dscCheckbox__checkmark {
     outline-color: var(--highlight-color-pure);
     outline-width: var(--border-width-thin);
     outline-style: solid;
   }
+
   // Checkbox / State / Disabled
-  input:disabled ~ .checkbox-checkmark {
+  input:disabled ~ .dscCheckbox__checkmark {
     border-color: var(--neutral-elements-01);
     color: var(--neutral-elements-01);
     dsc-icon::part(icon){
       color: var(--neutral-elements-01);
     }
   }
+
   &--disabled {
     color: var(--neutral-elements-01);
   }
