refactor: unit test and remaining components

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,10 +1,12 @@
 @import 'ds-in-code-design-tokens/dist/scss/mixins.scss';
 
-.textarea {
+
+.dscInputText {
   display: flex;
   flex-direction: column;
   min-width: 320px;
-  label{
+
+  label {
     color: var(--neutral-elements-03);
     font-size: var(--font-size-xxs);
     font-family: var(--font-family-01);
@@ -13,12 +15,11 @@
     padding-bottom: var(--spacing-size-quarck);
   }
 
-  textarea{
+  input {
     background-color: transparent;
     border: var(--border-width-thin) solid var(--neutral-elements-03);
     border-radius: var(--border-radius-sm);
-    height: 224px;
-    resize: none;
+    height: 48px;
     padding: var(--spacing-inset-size-xs);
     box-sizing: border-box;
     color: var(--neutral-elements-03);
@@ -26,56 +27,60 @@
     font-family: var(--font-family-01);
     line-height: var(--line-height-default);
     font-weight: var(--font-weight-regular);
+
     @include motion-token(switch-slow, '&:hover');
+
     &::placeholder {
       color: var(--neutral-elements-02);
     }
-    &:focus{
+
+    &:focus {
       outline-width: 0;
       outline-color: var(--highlight-color-pure);
       outline-offset: var(--border-width-thin);
     }
   }
 
-  &:hover{
-    textarea {
+  &:hover {
+    input {
       background-color: var(--neutral-surface-02);
     }
   }
 
-  &--focus{
-    textarea{
-      &:focus{
+  &--focus {
+    input {
+      &:focus {
         outline-width: var(--border-width-thin);
       }
     }
   }
 
-  &--error{
-    textarea{
+  &--error {
+    input {
       background-color: var(--feedback-color-warning-01);
       border-color: var(--feedback-color-warning-pure);
     }
   }
 
   &--disabled {
-    label{
+    label {
       color: var(--neutral-elements-01);
     }
-    textarea{
+    input {
       background-color: var(--neutral-surface-02);
       border-color: var(--neutral-elements-01);
       color: var(--neutral-elements-01);
+
       &::placeholder {
         color: var(--neutral-elements-01);
       }
     }
-    .textarea__helper-text {
+    .dscInputText__helper-text {
       color: var(--neutral-elements-01);
     }
   }
 
-  &__helper-text{
+  &__helper-text {
     padding-top: var(--spacing-size-nano);
     color: var(--neutral-elements-03);
     font-size: var(--font-size-xxs);
@@ -83,5 +88,4 @@
     line-height: var(--line-height-default);
     font-weight: var(--font-weight-regular);
   }
-
 }
